2004-07-28  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: For .deb, check scrollkeeper-update usage: must
	be run by .deb control scripts (Post{Inst,Rm}), not in pkg build
	phase; needs Depends:scrollkeeper

2004-07-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: fixes to my allowed-dirs changes.

2004-07-27  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Add --prefix to 'fink validate'.
	* Validation.pm: Allow user-speficied alternate prefix (%p other
	than $config->basepath). Added error checking when reading .info
	and .patch.

2004-07-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Check that files are in allowed dirs of .deb,
	not just not-in disallowed dirs.

2004-07-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Move @bad_dirs check early so don't miss things
	that get special handling (but not validation) by other matches.
	Replace @bad_dirs explicit loop with grep {}.

2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: _Un_restrict use of %a to PatchScript.

2004-07-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Run CompileScript (if one is explicitly defined)
	for dummy packages instead of just crashing.
	* VirtPackage.pm: Add CompileScript field: crash with with error
	message explaining to RTFDescDetail.

2004-07-18  Max Horn <max@quendi.de>

	* Configure.pm: Fix default value for the master mirror configure option.

2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Change get_tarball to return undef (instead of
	"none") if no such suffix. Fix get_checksum to really return undef
	if field not in .info.
	
2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Restrict use of %a to PatchScript.

2004-07-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: make sure a minimum of java versions are filled
	in so we don't get warnings.

2004-07-16  Benjamin Reed  <rangerrick@users.sourceforge.net>
